[gd_scene load_steps=5 format=2]

[ext_resource path="res://Hitboxes/Hitbox.tscn" type="PackedScene" id=1]
[ext_resource path="res://Sprites/Projectiles/fish.png" type="Texture" id=2]
[ext_resource path="res://Hitboxes/Projectiles/Fish.gd" type="Script" id=3]


[sub_resource type="CircleShape2D" id=1]
radius = 5.09902

[node name="Fish" type="Node2D"]
script = ExtResource( 3 )

[node name="Hitbox" parent="." instance=ExtResource( 1 )]
collision_layer = 16
collision_mask = 3
damage = 2

[node name="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
flip_v = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 2.98023e-07, 2.98023e-07 )
scale = Vector2( 0.5, 0.5 )

[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]

[editable path="Hitbox"]
